Quick updates to logo responsiveness

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <img src="img/u6-logo.png" alt="Avatar" class="logo">
     <!-- <h1 style="font-weight: 900;text-shadow: 2px 2px 8px rgba(33, 37, 43,0.2);position:relative;;"><b>U1 Consulting</b></h1> -->
     <!-- <img src="img/lamby2.png" class="lamb"> -->
-    <img src="img/u6-logo.PNG"  style="width:400px;" class="logo-two">
+    <img src="img/u6-logo.png"  style="width:400px;" class="logo-two">
     <!-- <div class="card">
       <div class="container">
         <h4><b>Search for your farm land</b></h4>
