Mail to button added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="card" style="height:">
       <div class="container">
-        <!-- <h4><b>U1 Consulting</b></h4> -->
+        <h4><b>About us</b></h4>
         <!-- <h5>Overview</h5> -->
         <p>U6 Consulting is a consulting group based in Perth, Western Australia. Founded in November 2018, U6 consulting is comprised of six university students. We aim to bring a stronger, better organised and more unified student consulting services to Perth and Australian organisations. Allowing development to occur for both the student consulting team and the organisations we help.</p>
 
@@ -119,67 +119,26 @@
 
         <!-- <h5>Farm environment profile</h5> -->
         <script src="script.js"></script>
-        <div id="slider">
-           <div class="slides">
-              <!-- First slide -->
-              <div class="slider">
-                 <div class="legend"></div>
-                 <div class="content">
-                    <div class="content-txt">
-                       <!-- <h1> Your title </h1> -->
-                       <!-- <h2> Your description </h2> -->
-                    </div>
-                 </div>
-                 <div class="images">
-                    <img src="bkg/1.jpg" style="width:100%;background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9));
-                    border-radius: 0.317rem;">
-                 </div>
-              </div>
-              <!-- Second slide -->
-              <div class="slider">
-                 <div class="legend"></div>
-                 <div class="content">
-                    <div class="content-txt">
-                       <!-- <h1> Your title </h1> -->
-                       <!-- <h2> Your description </h2> -->
-                    </div>
-                 </div>
-                 <div class="images">
-                    <img src="bkg/2.jpg" style="width:100%;background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9));
-                    border-radius: 0.317rem;">
-                 </div>
-              </div>
-              <!-- Third slide -->
-              <div class="slider">
-                 <div class="legend"></div>
-                 <div class="content">
-                    <div class="content-txt">
-                       <!-- <h1> Your title </h1> -->
-                       <!-- <h2> Your description </h2> -->
-                    </div>
-                 </div>
-                 <div class="images">
-                    <img src="bkg/3.jpg" style="width:100%;background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9));
-                    border-radius: 0.317rem;">
-                 </div>
-              </div>
-              <!-- Fourth slide -->
-              <div class="slider">
-                 <div class="legend"></div>
-                 <div class="content">
-                    <div class="content-txt">
-                       <!-- <h1> Your title </h1> -->
-                       <!-- <h2> Your description </h2> -->
-                    </div>
-                 </div>
-                 <div class="images">
-                    <img src="bkg/4.jpg"
-                    style="width:100%;background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9));
-                    border-radius: 0.317rem;">
-                 </div>
-              </div>
-           </div>
-        </div>
+      </div>
+    </div>
+
+
+    <div class="card" style="background-color:;color:;">
+      <div class="container">
+        <!-- <h4><b>U1 Consulting</b></h4> -->
+        <!-- <h5>Overview</h5> -->
+        <h4>Contact</h4>
+        <!-- <p>contact us at:</p> -->
+        <p><a href="mailto:u6consulting@gmail.com">u6consulting@gmail.com</a></p>
+
+
+        <!-- <h5>Rate your dad</h5> -->
+        <!-- <div class="range-slider">
+          <input class="range-slider__range" type="range" value="100" min="0" max="100">
+          <span class="range-slider__value">100</span>
+        </div> -->
+        <br>
+        <!-- <button class="button-round">Submit</button></p> -->
       </div>
     </div>
 
