Denhams full name

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <br>
         <div class="member">
         <div class"dpdiv"><img src="img/dp/denham.jpg" alt="Avatar" class="dp"></div>
-        <h2>Denham </h2>
+        <h2>Denham Wimbridge Glassford</h2>
         <p>Currently completing a degree in Computer science and Philosophy at the University of Western Australia, Denham has immersed himself with opportunities on and off campus. He has gained leadership experience volunteering through the City of Perth Surf Club as a Vice Captain of the beach patrol. Denham has also been involved on campus as the Founder and Vice president of the University Surf-riders of Western Australia. Denham is seeking to expand his skills through experience and believes U6 Consulting is a perfect opportunity to practically apply his studies.</p>
         <!-- <img src="img/f-rating.png" alt="Avatar" class="rating" style="height:50px"> -->
         <!-- <p style="font-size:0.6em;line-height:32px"><i>*Based on 12-point <a>quality metric standard</a></i></p> -->
