--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </head>
 
 <body>
-  <img src="img/u6-logo.png" alt="Avatar" class="logo">
+  <img src="img/u6-rgba.png" alt="Avatar" class="logo">
     <!-- <h1 style="font-weight: 900;text-shadow: 2px 2px 8px rgba(33, 37, 43,0.2);position:relative;;"><b>U1 Consulting</b></h1> -->
     <!-- <img src="img/lamby2.png" class="lamb"> -->
-    <img src="img/u6-logo.png"  style="width:400px;" class="logo-two">
+    <img src="img/u6-rgba.png"  style="width:400px;" class="logo-two">
     <!-- <div class="card">
       <div class="container">
         <h4><b>Search for your farm land</b></h4>
@@ -31,7 +31,7 @@
       <div class="container">
         <h4><b>About us</b></h4>
         <!-- <h5>Overview</h5> -->
-        <p>U6 Consulting is a consulting group based in Perth, Western Australia. Founded in November 2018, U6 consulting is comprised of six university students. We aim to bring a stronger, better organised and more unified student consulting services to Perth and Australian organisations. Allowing development to occur for both the student consulting team and the organisations we help.</p>
+        <p>U6 Consulting is a consulting group based in Perth, Western Australia. Founded in November 2018, U6 Consulting is comprised of six university students. We aim to bring a stronger, better organised and more unified student consulting services to Perth and Australian organisations. Allowing development to occur for both the student consulting team and the organisations we help.</p>
 
 
         <!-- <h5>Rate your dad</h5> -->
@@ -128,7 +128,7 @@
         <!-- <h4><b>U1 Consulting</b></h4> -->
         <!-- <h5>Overview</h5> -->
         <h4>Contact</h4>
-        <!-- <p>contact us at:</p> -->
+        <p>For enquiries, please contact us at:</p>
         <p><a href="mailto:u6consulting@gmail.com">u6consulting@gmail.com</a></p>
 
 
